update pluginManagement